# curriculum-skills

./: .coverage  .dockerignore  .env  Dockerfile  INSTALLATIONREADME.md  README.md  TESTREADME.md  config.py  crawler.py  database.py  database.sql  docker-compose.yml  helpers.py  main.py  menu.py  mkdocs.yml  output.py  pdf_utils.py  pyproject.toml  requirements.txt  skillcrawl.py  skills.py  university_cache.json
OLD VERSION/: pyproject.toml
OLD VERSION/tests/: test_analyzer.py
cache/: BTH_cache.json  Buck Institute_cache.json  Cambridge University_cache.json  Delft University of Technology_cache.json  EPFL_cache.json  ETH Zurich_cache.json  First Year University_cache.json  Imperial College_cache.json  Johannes Kepler University_cache.json  Mälardalen University_cache.json  Technische Universitat Munchen_cache.json  Universidad Politécnica de Madrid_cache.json  University College London_cache.json  University of Amsterdam_cache.json  University of Cambridge_cache.json  University of Groningen_cache.json  University of Luxembourg_cache.json  University of Macedonia_cache.json  University of Oxford_cache.json  University of Stuttgart_cache.json  University of Toronto Code_cache.json  University of York_cache.json  Unknown University_cache.json  Utrecht University_cache.json  VU University_cache.json  pdf_cache.json
crawler/: pyproject.toml
crawler/tests/: analyzer.py  test_skill_extractor.py
docs/: index.md  installation.md  testing.md
jenkins/: Jenkinsfile
mysql_config/: my.cnf
tests/: test_analyzer.py  test_compare_extracted_skills.py  (+3 more)
(+5 files in other folders)
