[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Mary Fol <miafol123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
spacy = "^3.4.0"
pydantic = ">=1.8,<1.9" 
ojd-daps-skills = "^1.0.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
