[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Mary Fol <miafol123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
