[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Mary Fol <miafol123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
ojd-daps-skills = "^1.0.2"
spacy = ">=3.5.0,<3.6.0"
pydantic = ">=1.10.0,<1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
